[workspace.package]
authors = ["clara contributors"]
description = "Zksync light client"
documentation = "https://docs.rs/palm.rs"
edition = "2021"
homepage = "https://github.com/lbkolev/clara"
license = "MIT OR Apache-2.0"
version = "0.0.1"
rust-version = "1.75.0"
readme = "README.md"
repository = "https://github.com/lbkolev/clara"

[workspace]
members = [
    "crates/clara",
    "crates/api"
]

[workspace.dependencies]
jsonrpsee = { version = "0.21.0", features = ["full"] }
